race condition on cancel button fixed again fixed db still update on cancel db actually updates tags overflow scroll

--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -114,6 +114,7 @@ input
     height: 80%;
     padding: 2px 5px 2px 5px;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 .tags .tag
